--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,27 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools" package="com.baott.trackme">
+          xmlns:tools="http://schemas.android.com/tools"
+          package="com.baott.trackme">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-
-    <!-- Check connection -->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
     <application
-            android:name="com.baott.trackme.application.MyApplication"
+            android:name=".application.MyApplication"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme" tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name="com.baott.trackme.ui.activities.home.MainActivity">
+            android:theme="@style/AppTheme"
+            tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".ui.activities.record.RecordActivity"
+                  android:launchMode="singleTask"
+                  android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".ui.activities.home.HomeActivity"
+                  android:screenOrientation="portrait">
+
+        </activity>
+
+        <service
+                android:name=".service.LocationForegroundService"
+                android:enabled="true"
+                android:exported="true"/>
+
+        <meta-data
+                android:name="com.google.android.geo.API_KEY"
+                android:value="AIzaSyDtMPNbY0rY2q-SAp55J1SSGwLULXlB_HI"/>
     </application>
 
 </manifest>
