--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,18 +16,18 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="GoogleAppIndexingWarning">
+
         <activity android:name=".ui.activities.record.RecordActivity"
                   android:launchMode="singleTask"
+                  android:screenOrientation="portrait"/>
+
+        <activity android:name=".ui.activities.home.HomeActivity"
                   android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-        </activity>
-        <activity android:name=".ui.activities.home.HomeActivity"
-                  android:screenOrientation="portrait">
-
         </activity>
 
         <service
